# pet-quantize

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  params.yaml  pyproject.toml
.github/workflows/: ci.yml  no-wandb-residue.yml  peer-dep-smoke.yml  quantize_validate.yml
docs/: architecture.md  phase-3b-audit.md
docs/superpowers/plans/: 2026-04-15-pet-quantize-implementation.md
docs/superpowers/specs/: 2026-04-15-pet-quantize-design.md
src/pet_quantize/: __init__.py  config.py
src/pet_quantize/calibration/: __init__.py  audio_loader.py  build_calib_dataset.py  validate_calib.py  vision_loader.py  vlm_loader.py
src/pet_quantize/convert/: __init__.py  convert_audio.py  convert_to_rkllm.py  convert_to_rknn.py  export_vision_encoder.py
src/pet_quantize/inference/: __init__.py  pipeline.py  rkllm_runner.py  rknn_runner.py
src/pet_quantize/packaging/: __init__.py  build_package.py  sign_package.py  verify_package.py
src/pet_quantize/plugins/: _register.py
src/pet_quantize/plugins/converters/: audio_rknn_fp16.py  noop.py  vision_rknn_fp16.py  vlm_rkllm_w4a16.py
src/pet_quantize/plugins/datasets/: audio_calibration_subset.py  vision_calibration_subset.py  vlm_calibration_subset.py
src/pet_quantize/validate/: __init__.py  conftest.py  test_audio_accuracy.py  test_kl_divergence.py  test_latency.py  test_schema_compliance.py
tests/: conftest.py  test_audio_rknn_converter.py  test_build_calib.py  test_build_package.py  test_calibration_datasets.py  test_config.py  test_convert_audio.py  test_convert_rkllm.py  test_convert_rknn.py  test_export_vision_encoder.py  test_noop_converter.py  test_pipeline.py  test_plugin_register_missing_sdk.py  test_plugin_register_noop.py  test_sign_package.py  test_validate_calib.py  test_verify_package.py  test_version.py  test_vision_rknn_converter.py  test_vlm_rkllm_converter.py
