[build-system]
requires = [
    "setuptools>=68.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pet-quantize"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pet-schema @ git+https://github.com/Train-Pet-Pipeline/pet-schema.git@v2.3.1",
    "pet-infra @ git+https://github.com/Train-Pet-Pipeline/pet-infra.git@v2.4.0-rc1",
    "torch>=2.1",
    "torchaudio>=2.1",
    "transformers>=4.44,<5.0",
    "onnx>=1.14,<2.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "cryptography>=41.0,<43.0",
    "tenacity",
    "python-json-logger",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.entry-points."pet_infra.plugins"]
pet_quantize = "pet_quantize.plugins._register:register_all"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "pet_quantize",
    "pet_quantize.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
